--- a/ckanext/multilinguality/theme/templates/recline_edit.html
+++ b/ckanext/multilinguality/theme/templates/recline_edit.html
@@ -1,11 +1,12 @@
 {% extends "dataviewer/base.html" %}
-
+{% set language = c.resource_language %}
 {% block page %}
 <div id="windowTitleDialog" class="modal hide" tabindex="-1" role="dialog" aria-labelledby="windowTitleLabel" aria-hidden="true">
         </div>
         <!-- <a data-toggle="modal" id="button" href="#windowTitleDialog" class="btn btn-primary btn-large">Click</a> -->
-<div id="saveButtons" style="float:right"></div>
-<div data-module="reclinepreview" data-module-site_url="{{ h.dump_json(h.url('/', locale='default', qualified=true)) }}">
+        <div id="saveButtons" style="float:right"></div>
+{{language}}
+<div id="reclinetranslate" data-module="reclinepreview" translation_language = "{{language}}" data-module-site_url="{{ h.dump_json(h.url('/', locale='default', qualified=true)) }}">
       
           <h4 class="loading-dialog">
       <div class="loading-spinner"></div>
