--- a/ckanext/multilinguality/theme/templates/package/resource_edit.html
+++ b/ckanext/multilinguality/theme/templates/package/resource_edit.html
@@ -13,7 +13,7 @@
   {% if h.check_access('package_update', {'id':pkg.id }) and not translation_resource %}
   <div class="dropdown btn-group">
     <a href="#" class="btn btn-primary dropdown-toggle"  data-toggle="dropdown">
-      <i class="icon-flag"></i>
+      <i class="icon-flag-alt"></i>
       {{ _('Translate') }}
       <span class="caret"></span>
     </a>
