--- a/ckanext/multilinguality/theme/templates/package/resource_translate.html
+++ b/ckanext/multilinguality/theme/templates/package/resource_translate.html
@@ -28,13 +28,14 @@
   {# <li class="active"><a href="">{{ _('Translation') }}</a></li> #}
 {% endblock %}
 
-{% block resource_languages %}
-{{ _('Translating resource in language:') }}
-<ul class="dataset-resources unstyled">
-<li><a class="label ">{{ language|upper }}</a></li>
+{% block resource_read_title %}
+<h1 class="page-heading">{{ h.resource_display_name(res) | truncate(50) }}
+<ul class="dataset-resources unstyled" style="display:inline-block">
+<li><a class="label" style="vertical-align: middle; margin:0">{{ language|upper }}</a></li>
 </ul>
-
+</h1>
 {% endblock %}
+
 {% block pre_primary %}
     {% block resource %}
     <section class="module module-resource">
