--- a/ckanext/multilinguality/theme/templates/recline_read_translated.html
+++ b/ckanext/multilinguality/theme/templates/recline_read_translated.html
@@ -1,7 +1,7 @@
 {% extends "dataviewer/base.html" %}
 
 {% block page %}
-<div data-module="reclinepreview" data-module-site_url="{{ h.dump_json(h.url('/', locale='default', qualified=true)) }}">
+<div data-module="recline_translate_read_preview" data-module-site_url="{{ h.dump_json(h.url('/', locale='default', qualified=true)) }}">
       
           <h4 class="loading-dialog">
       <div class="loading-spinner"></div>
