cleaned up code and fixed several bugs

--- a/ckanext/multilinguality/theme/public/css/recline.css
+++ b/ckanext/multilinguality/theme/public/css/recline.css
@@ -102,10 +102,10 @@ body {
     //background-color: #fff;
 }
 .column-no-translate{
-    background-color: #666666 !important;
+    background-color: #e2576b !important;
 }
 .column-manual{
-    background-color: #67da5e !important;
+    background-color: #7ccb66 !important;
 }
 .column-automatic{
     background-color: #e9e580 !important;
