transcription results enhancement

--- a/ckanext/multilinguality/theme/templates/package/snippets/resource_item.html
+++ b/ckanext/multilinguality/theme/templates/package/snippets/resource_item.html
@@ -1,6 +1,7 @@
 {% ckan_extends %}
 
-{% block resource_languages %}
+{% block resource_item_description %}
+{{ super() }}
 {# not available here 
 {% if res.datastore_active %}
 #}
