resource delete from UI now also removes translation resources

--- a/ckanext/multilinguality/theme/templates/package/snippets/resource_item.html
+++ b/ckanext/multilinguality/theme/templates/package/snippets/resource_item.html
@@ -5,7 +5,7 @@
 {# not available here 
 {% if res.datastore_active %}
 #}
-{% if res.format == 'csv' %}
+{% if res.format == 'csv' or res.format == 'xls' %}
 {% snippet 'package/snippets/resource_languages.html', pkg=pkg, res=res %}
 {% endif %}
 {% endblock %}
