--- a/ckanext/multilingual_datastore/theme/templates/package/resource_translate.html
+++ b/ckanext/multilingual_datastore/theme/templates/package/resource_translate.html
@@ -59,7 +59,11 @@
                 <span class="color sample translatable-field column-no-translate"></span>
                 <span class="description" title="{{ _('The field is set as non translatable')}}">{{_('Non translatable')}}</span>
                 
+                <span class="color sample translatable-field column-default"></span>
+                <span class="description" title="{{ _('No translation action has been taken on this field')}}">{{_('No action')}}</span>
+                
                 <span class="color sample translatable-field column-manual"></span>
+
                 <span class="description" title="{{_('Field translation mode is set to manual')}}">{{_('Manual')}}</span>
                 
                 <span class="color sample translatable-field column-automatic"></span>
