extracted translatable strings and translated to greek

--- a/ckanext/multilingual_datastore/theme/templates/package/resource_edit.html
+++ b/ckanext/multilingual_datastore/theme/templates/package/resource_edit.html
@@ -21,9 +21,9 @@
     <ul class="dropdown-menu">
     {% block translate_item_explore_links %}
     {% for locale in h.get_available_locales() %}
-        {% if not locale == h.get_orig_language(res) %}
+        {% if not locale == h.get_orig_locale(res) %}
         <li>
-        <a data-module="check_status" data-module-language="{{ locale.english_name}}" data-module-status="{{ h.get_language_translation_status(res, locale)}}" href="{{ h.url_for(controller='ckanext.multilingual_datastore.controllers.resource:ResourceController', action='resource_translate', resource_id=res.id, id=pkg.name, language=locale) }}">{{ h.get_orig_language(res).display_name }} -> {{ locale.display_name }}</a>
+        <a data-module="check_status" data-module-language="{{ locale.english_name}}" data-module-status="{{ h.get_language_translation_status(res, locale)}}" href="{{ h.url_for(controller='ckanext.multilingual_datastore.controllers.resource:ResourceController', action='resource_translate', resource_id=res.id, id=pkg.name, language=locale) }}">{{ h.get_orig_locale(res).display_name }} -> {{ locale.display_name }}</a>
         </li>
         {% endif %}
       {% endfor %}
