--- a/ckanext/multilingual_datastore/theme/templates/package/resource_translate.html
+++ b/ckanext/multilingual_datastore/theme/templates/package/resource_translate.html
@@ -57,19 +57,19 @@
             <span class="samples">
 
                 <span class="color sample translatable-field column-no-translate"></span>
-                <span class="description" title="{{ _('The field is set as non translatable')}}">{{_('Non translatable')}}</span>
+                <span class="description" title="{{ _('Column is set as non translatable')}}">{{_('Non translatable')}}</span>
                 
                 <span class="color sample translatable-field column-default"></span>
-                <span class="description" title="{{ _('No translation action has been taken on this field')}}">{{_('No action')}}</span>
+                <span class="description" title="{{ _('No translation action has been taken on this column')}}">{{_('No action')}}</span>
                 
                 <span class="color sample translatable-field column-manual"></span>
 
-                <span class="description" title="{{_('Field translation mode is set to manual')}}">{{_('Manual')}}</span>
+                <span class="description" title="{{_('Column translation mode is set to manual')}}">{{_('Manual')}}</span>
                 
                 <span class="color sample translatable-field column-automatic"></span>
-                <span class="description" title="{{_('Field translation mode is set to automatic (from INSPIRE-compliant vocabularies)')}}">{{_('Automatic')}}</span>
+                <span class="description" title="{{_('Column translation mode is set to automatic (from INSPIRE-compliant vocabularies)')}}">{{_('Automatic')}}</span>
                 <span class="color sample translatable-field column-transcription"></span>
-                <span class="description" title="{{_('Field translation mode is set to transcription')}}">{{_('Transcription')}}</span>
+                <span class="description" title="{{_('Column translation mode is set to transcription')}}">{{_('Transcription')}}</span>
             </span>
         </span>
 
