styling changes to resource item

--- a/ckanext/multilingual_datastore/theme/templates/package/snippets/resource_languages.html
+++ b/ckanext/multilingual_datastore/theme/templates/package/snippets/resource_languages.html
@@ -1,6 +1,6 @@
 {% set languages = h.get_resource_languages(res)%}
 
-    <ul class="dataset-resources unstyled" style="display:inline-block">
+    <ul class="dataset-resources unstyled" style="display:inline-block; margin-left:10px">
     {% if languages %}
         {% for lang in languages %}
         <li>
