--- a/ckanext/multilingual_datastore/theme/templates/package/snippets/resource_item.html
+++ b/ckanext/multilingual_datastore/theme/templates/package/snippets/resource_item.html
@@ -1,11 +1,11 @@
 {% ckan_extends %}
 
-{% block resource_item_description %}
+{% block resource_item_title %}
 {{ super() }}
 {# not available here 
 {% if res.datastore_active %}
 #}
-{% if res.format == 'csv' or res.format == 'xls' %}
+ {% if res.format == 'csv' or res.format == 'xls' or res.format == 'shapefile' %} 
 {% snippet 'package/snippets/resource_languages.html', pkg=pkg, res=res %}
-{% endif %}
+ {% endif %} 
 {% endblock %}
